--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -178,8 +178,6 @@
     <string name="pref_summary_notification_vibrateWhen" msgid="669655090822561447">"Attiva anche vibrazione alla notifica"</string>
     <string name="pref_title_notification_ringtone" msgid="5467265237106229952">"Scegli suoneria"</string>
     <string name="pref_messages_to_save" msgid="3202539743892934926">"Imposta numero di messaggi da salvare"</string>
-    <string name="pref_title_input_type">Funzione Invio</string>
-    <string name="pref_summary_input_type">Seleziona la funzione del tasto Invio durante la scrittura dei messaggi</string>
   <string-array name="prefEntries_vibrateWhen">
     <item msgid="2520871831815631409">"Sempre"</item>
     <item msgid="6069709696037750627">"Solo in modalità silenziosa"</item>
@@ -293,7 +291,6 @@
     <string name="saved_ringtone_fail" msgid="4778500070919251116">"Salvataggio suoneria non riuscito."</string>
     <string name="menu_insert_smiley" msgid="4964504393061025071">"Inserisci emoticon"</string>
     <string name="menu_group_participants" msgid="4288356090262299071">"Partecipanti al gruppo"</string>
-    <string name="menu_insert_emoji">Inserisci emoji</string>
     <string name="select_link_title" msgid="3371818607625768447">"Scegli azione"</string>
     <string name="slide_number" msgid="1923958526266726635">"Diapositiva <xliff:g id="NUMBER">%s</xliff:g>"</string>
   <plurals name="slide_duration">
@@ -353,6 +350,12 @@
     <string name="notification_separator" msgid="2334673105226536422">"  "</string>
     <string name="enumeration_comma" msgid="213598026698964628">", "</string>
     <string name="message_timestamp_format" msgid="4188999027493614617">"<xliff:g id="STRING_0">%1$s</xliff:g> - <xliff:g id="STRING_1">%2$s</xliff:g>"</string>
+    <string name="pref_extra_settings">Impostazioni aggiuntive</string>
+    <string name="pref_title_strip_unicode">Rimuovi unicode</string>
+    <string name="pref_summary_strip_unicode">Sostituisci caratteri comuni che non sono supportati nei messaggi SMS da 160 caratteri</string>
+    <string name="pref_title_enable_emojis">Supporto emoji</string>
+    <string name="pref_summary_enable_emojis">Abilita il supporto agli emoji unicode, un set di 471 graziosi "emoticons"</string>
+    <string name="menu_insert_emoji">Inserisci emoji</string>
     <string name="pref_title_sms_split_counter">Contatore SMS</string>
     <string name="pref_summary_sms_split_counter">Indica quanti SMS compongono il messaggio</string>
     <string name="prefs_templates_settings">Modelli sms</string>
@@ -385,17 +388,16 @@
     <string name="pref_summary_mms_notification_vibrate_call">Permetti la vibrazione durante una chiamata</string>
     <string name="pref_title_mms_notification_vibrate_custom">Schema personalizzato</string>
     <string name="pref_text_mms_notification_vibrate_custom">Formatta off/on in millisecondi: off, on, off, on, ...</string>
-    <string name="pref_extra_settings">Impostazioni aggiuntive</string>
-    <string name="pref_title_strip_unicode">Rimuovi unicode</string>
-    <string name="pref_summary_strip_unicode">Sostituisci caratteri comuni che non sono supportati nei messaggi SMS da 160 caratteri</string>
-    <string name="pref_title_enable_emojis">Supporto emoji</string>
-    <string name="pref_summary_enable_emojis">Abilita il supporto agli emoji unicode, un set di 471 graziosi "emoticons"</string>
     <string name="pref_title_mms_full_timestamp">Timestamp completi</string>
     <string name="pref_summary_mms_full_timestamp">Visualizza data e ora nei timestamp</string>
     <string name="pref_title_mms_use_sent_timestamp">Timestamp originali</string>
     <string name="pref_summary_mms_use_sent_timestamp">Visualizza la data di invio, non quella di ricezione</string>
+    <string name="menu_add_to_calendar">Aggiungi al calendario</string>
     <string name="pref_keyboard_emoji">Inserisce emoji</string>
     <string name="pref_keyboard_new_line">Va a capo</string>
+    <string name="pref_keyboard_unknown">Sconosciuto, si prega di riselezionare</string>
+    <string name="pref_title_input_type">Funzione Invio</string>
+    <string name="pref_summary_input_type">Seleziona la funzione del tasto Invio durante la scrittura dei messaggi</string>
     <string name="pref_quickmessage">Messaggi e risposte rapidi</string>
     <string name="pref_quickmessage_title">Mostra messaggi rapidi</string>
     <string name="pref_quickmessage_summary">Mostra il pop-up di messaggio rapido per gli sms in arrivo</string>
@@ -412,5 +414,5 @@
     <string name="type_to_reply_text_enter_to_send">Digita per rispondere</string>
     <string name="toast_sending_message">Invio messaggio</string>
     <string name="qm_quick_reply">Rispondi</string>
-    <string name="menu_add_to_calendar">Aggiungi al calendario</string>
+    <string name="qm_mark_read">Letto</string>
 </resources>
