--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -413,4 +413,5 @@
     <string name="menu_add_to_calendar">Adicionar ao calendário</string>
     <string name="pref_keyboard_emoji">Exibir a tecla de Emoticons</string>
     <string name="pref_keyboard_unknown">Desconhecido, favor reselecionar</string>
+    <string name="qm_mark_read">Lida</string>
 </resources>
